# internal/router/day.go
@@ -2,11 +2,17 @@ package router
 
 import (
 	"advent-calendar/internal/handler"
+	"advent-calendar/internal/middleware"
+	"advent-calendar/pkg/utils"
 
 	"github.com/gofiber/fiber/v2"
 )
 
 func DayRouter(r fiber.Router) {
-	users := r.Group("/day")
-	users.Post("/", handler.DayHandler.Create)
+	dayUpload := []utils.Upload{{FileKey: "attachments"}}
+
+	days := r.Group("/days")
+	days.Post("/", middleware.AdminMiddleware, utils.UploadFiles(dayUpload), handler.DayHandler.Create)
+	days.Get("/", handler.DayHandler.GetAll)
+
 }
